--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -6,4 +6,5 @@
     app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?attr/actionBarSize" />
+    android:minHeight="?attr/actionBarSize"
+    android:background="?attr/colorPrimary"/>
