--- a/app/src/main/res/layout/activity_track_workout.xml
+++ b/app/src/main/res/layout/activity_track_workout.xml
@@ -9,9 +9,7 @@
 
     <com.astuetz.PagerSlidingTabStrip
         android:id="@+id/track_workout_tabs"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/colorPrimary" />
+        style="@style/tabs" />
 
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
