--- a/app/src/main/res/layout/fragment_user_routine.xml
+++ b/app/src/main/res/layout/fragment_user_routine.xml
@@ -7,9 +7,7 @@
 
     <com.astuetz.PagerSlidingTabStrip
         android:id="@+id/routine_tabs"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/colorPrimary" />
+        style="@style/tabs"/>
 
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
