--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,4 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?attr/actionBarSize"
-    android:background="?attr/colorPrimary"/>
+    android:background="?attr/colorPrimary"
+    style="@style/toolbar">
+    </android.support.v7.widget.Toolbar>
