--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -8,5 +8,13 @@
         <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
     </style>
 
+    <style name="tabs" parent="tabsBase">
+        <item name="android:elevation">5dp</item>
+    </style>
+
+    <style name="toolbar">
+        <item name="android:elevation">5dp</item>
+    </style>
+
 
 </resources>
