added abillity to add workout, bug fixes

--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -9,6 +9,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.sqvat.squat.activities.ExerciseActivity">
 
+    <include layout="@layout/toolbar"></include>
+
 
     <TextView
         android:layout_width="wrap_content"
