--- a/app/src/main/res/menu/edit_routine.xml
+++ b/app/src/main/res/menu/edit_routine.xml
@@ -1,8 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.sqvat.squat.activities.EditRoutineAct" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item android:id="@+id/action_add_workout"
+        android:title="Add workout"
         android:orderInCategory="100"
         android:showAsAction="never" />
 </menu>
