bug fixes, improvments, added sound on rest finished

--- a/app/src/main/res/menu/config_session.xml
+++ b/app/src/main/res/menu/config_session.xml
@@ -1,9 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.sqvat.squat.activities.ConfigSessionActivity" >
     <item android:id="@+id/action_save"
         android:title="save"
         android:orderInCategory="100"
-        android:showAsAction="ifRoom"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_accept"/>
 </menu>
