--- a/app/src/main/res/layout/activity_config_session.xml
+++ b/app/src/main/res/layout/activity_config_session.xml
@@ -1,19 +1,14 @@
-<FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
-    <include layout="@layout/toolbar">
-
-    </include>
-
-    <LinearLayout
+   <LinearLayout
+       xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:weightSum="1">
+
+        <include layout="@layout/toolbar">
+        </include>
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:inputType="number"
@@ -21,8 +16,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:paddingTop="5dp"
-            android:hint="Sets"
-            android:id="@+id/configSetsEt"
+            android:hint="Reps"
+            android:id="@+id/config_sets_et"
             app:primaryColor="@color/colorPrimary"
             app:floatingLabel="highlight"
             android:textSize="20sp"/>
@@ -34,7 +29,7 @@
             android:layout_margin="15dp"
             android:paddingTop="5dp"
             android:hint="Reps"
-            android:id="@+id/configRepsEt"
+            android:id="@+id/config_reps_et"
             app:primaryColor="@color/colorPrimary"
             app:floatingLabel="highlight"
             android:textSize="20sp"/>
@@ -46,7 +41,7 @@
             android:layout_margin="15dp"
             android:paddingTop="5dp"
             android:hint="Rest (seconds)"
-            android:id="@+id/configRestEt"
+            android:id="@+id/config_rest_et"
             app:primaryColor="@color/colorPrimary"
             app:floatingLabel="highlight"
             android:textSize="20sp"
@@ -54,24 +49,21 @@
 
             />
 
+       <com.shamanland.fab.FloatingActionButton
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:src="@drawable/ic_action_finish"
+           app:floatingActionButtonColor="@color/colorAccent"
+           app:floatingActionButtonSize="normal"
+           android:layout_gravity="right"
+           android:layout_marginBottom="20dp"
+           android:layout_marginRight="20dp"
+           android:id="@+id/save_config"
+           />
+
     </LinearLayout>
 
 
 
 
-    <com.shamanland.fab.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_action_finish"
-        app:floatingActionButtonColor="@color/colorAccent"
-        app:floatingActionButtonSize="normal"
-        android:layout_gravity="right|bottom"
-        android:layout_marginBottom="7dp"
-        android:layout_marginRight="7dp"
 
-
-        android:id="@+id/save_config"
-
-        />
-
-</FrameLayout>
