--- a/app/src/main/res/menu/edit_routine.xml
+++ b/app/src/main/res/menu/edit_routine.xml
@@ -1,8 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.sqvat.squat.activities.EditRoutineAct" >
     <item android:id="@+id/action_add_workout"
         android:title="Add workout"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 </menu>
