--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowActionBar">false</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
     </style>
 
     <style name="btn">
@@ -21,13 +22,11 @@
         <item name="android:paddingTop">2dp</item>
         <item name="android:paddingLeft">4dp</item>
         <item name="android:textSize">22sp</item>
-        <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:color">@android:color/black</item>
     </style>
 
     <style name="card_header">
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:layout_marginLeft">8dp</item>
 
     </style>
