--- a/app/src/main/res/layout/fancy_li.xml
+++ b/app/src/main/res/layout/fancy_li.xml
@@ -6,12 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight"
-    android:paddingTop="12dp"
-    android:paddingBottom="12dp"
-    android:divider="@null"
-    android:dividerHeight="0dp"
-
-
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
+    android:divider="@android:color/transparent"
+    android:dividerHeight="-1dp"
     >
 
     <LinearLayout
@@ -20,7 +18,9 @@
         android:layout_weight="1"
         android:orientation="vertical"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp">
+        android:layout_marginLeft="10dp"
+        android:divider="@null"
+        android:dividerHeight="0dp">
         <TextView
 
             android:id="@+id/fancy_li_header"
