--- a/app/src/main/res/layout/fragment_track_session.xml
+++ b/app/src/main/res/layout/fragment_track_session.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!--Today's info-->
+    <!--Session's info-->
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -51,20 +51,16 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
                     style="@style/card_header"
                     android:textSize="18sp"
-
-                    android:id="@+id/sets_left"
-
-                    android:text="5 sets left"/>
+                    android:id="@+id/session_card_sub_header"/>
             </LinearLayout>
 
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
 
-                android:id="@+id/current_workout_info_lv"
+                android:id="@+id/session_info"
 
                 android:layout_below="@id/workout_header"></ListView>
         </RelativeLayout>
