--- a/app/src/main/res/layout/fragment_user_routine.xml
+++ b/app/src/main/res/layout/fragment_user_routine.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/user_routine_root">
 
     <com.astuetz.PagerSlidingTabStrip
         android:id="@+id/routine_tabs"
