mediaPlayer bug fixes, removed divider from listviews, fixed issue when returning to user routine fragment

--- a/app/src/main/res/layout/activity_detailed_history.xml
+++ b/app/src/main/res/layout/activity_detailed_history.xml
@@ -9,6 +9,8 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/detailed_history_lv"></ListView>
+        android:id="@+id/detailed_history_lv"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"></ListView>
 
 </LinearLayout>
