--- a/app/src/main/res/layout/detailed_history_li.xml
+++ b/app/src/main/res/layout/detailed_history_li.xml
@@ -18,6 +18,6 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/sets_grid"/>
+        android:id="@+id/sets_lv"></ListView>
 
 </LinearLayout>
