--- a/app/src/main/res/layout/fragment_edit_workout.xml
+++ b/app/src/main/res/layout/fragment_edit_workout.xml
@@ -60,7 +60,9 @@
 
                 android:id="@+id/edit_sessions_list"
 
-                android:layout_below="@id/workout_header"></ListView>
+                android:layout_below="@id/workout_header"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="0dp"></ListView>
 
             <com.shamanland.fab.FloatingActionButton
                 android:layout_width="wrap_content"
