--- a/app/src/main/res/layout/activity_choose_exercise.xml
+++ b/app/src/main/res/layout/activity_choose_exercise.xml
@@ -12,5 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/exercises_list"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"/>
 </LinearLayout>
