changed minSdk to 16

--- a/app/src/main/res/layout/fragment_track_session.xml
+++ b/app/src/main/res/layout/fragment_track_session.xml
@@ -62,7 +62,9 @@
 
                 android:id="@+id/session_info"
 
-                android:layout_below="@id/workout_header"></ListView>
+                android:layout_below="@id/workout_header"
+                android:dividerHeight="0dp"
+                android:divider="@android:color/transparent"></ListView>
         </RelativeLayout>
 
 
