--- a/app/src/main/res/layout/nav_drawer_li.xml
+++ b/app/src/main/res/layout/nav_drawer_li.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<TextView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="48dp"
+    android:orientation="horizontal">
+
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center_vertical|left"-->
+        <!--android:layout_marginLeft="16dp"-->
+        <!--/>-->
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical|left"
     android:textSize="14sp"
+    android:fontFamily="sans-serif-medium"
     android:textColor="#87000000"
-    android:gravity="left"
     android:layout_marginLeft="16dp"
     android:id="@+id/drawer_li_textview"
-    >
-
-
-</TextView>
+    />
+</LinearLayout>
