--- a/app/src/main/res/layout/activity_edit_routine.xml
+++ b/app/src/main/res/layout/activity_edit_routine.xml
@@ -8,10 +8,7 @@
 
     <include layout="@layout/toolbar"/>
 
-    <com.astuetz.PagerSlidingTabStrip
-        android:id="@+id/edit_routine_tabs"
-        style="@style/tabs"
-        />
+    <include layout="@layout/tabs"></include>
 
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
