--- a/app/src/main/res/layout/activity_track_workout.xml
+++ b/app/src/main/res/layout/activity_track_workout.xml
@@ -7,9 +7,7 @@
 
     <include layout="@layout/toolbar"/>
 
-    <com.astuetz.PagerSlidingTabStrip
-        android:id="@+id/track_workout_tabs"
-        style="@style/tabs" />
+    <include layout="@layout/tabs"></include>
 
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
