--- a/app/src/main/res/layout/fragment_user_routine.xml
+++ b/app/src/main/res/layout/fragment_user_routine.xml
@@ -6,9 +6,7 @@
     android:orientation="vertical"
     android:id="@+id/user_routine_root">
 
-    <com.astuetz.PagerSlidingTabStrip
-        android:id="@+id/routine_tabs"
-        style="@style/tabs"/>
+    <include layout="@layout/tabs"></include>
 
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
