--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,9 +47,12 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">?attr/actionBarSize</item>
         <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
-    <style name="tabs" parent="tabsBase"></style>
+    <style name="tabs" parent="tabsBase">
+
+    </style>
 
     <!--<style name="input">-->
         <!--<item name="sqvat.squat:primaryColor">@color/colorPrimary</item>-->
