fixed the trackWorkoutAct fragments killing issues

--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true">
 
-    <include layout="@layout/toolbar"/>
+    <include layout="@layout/toolbar"></include>
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
