finised the core, fixed all major bugs, finished history and deailed history, fixed icon, fixed the settings REPS FOR JESUS 2

--- a/app/src/main/res/layout/activity_detailed_history.xml
+++ b/app/src/main/res/layout/activity_detailed_history.xml
@@ -10,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/detailed_history_lv"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"></ListView>
+        ></ListView>
 
 </LinearLayout>
