--- a/app/src/main/res/layout/detailed_history_li.xml
+++ b/app/src/main/res/layout/detailed_history_li.xml
@@ -15,9 +15,10 @@
         android:text="SQUAT"
         android:id="@+id/detailed_history_exercise_name" />
 
-    <ListView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/sets_lv"></ListView>
+        android:orientation="vertical"
+        android:id="@+id/sets"/>
 
 </LinearLayout>
