--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -5,51 +5,47 @@
     android:layout_height="match_parent"
     tools:context="com.sqvat.squat.activities.ExerciseActivity">
 
-    <include layout="@layout/toolbar"></include>
+    <include layout="@layout/transparent_toolbar"
+        android:id="@+id/exercise_toolbar"></include>
 
-
-    <TextView
+    <com.shamanland.fab.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Instructions"
-        android:id="@+id/instructions_header"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
+        app:floatingActionButtonColor="@color/colorAccent"
 
-        style="@style/header"/>
+        android:id="@+id/play_video"
+
+        android:src="@drawable/ic_action_add"
+        android:layout_marginTop="-32dp"
+        android:layout_marginRight="16dp"
+        android:layout_below="@+id/exercise_toolbar"
+        android:layout_alignParentRight="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_below="@+id/instructions_header"
-        android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout">
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/instructions_lv"></ListView>
-        </LinearLayout>
+        android:layout_height="100dp"
 
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:layout_below="@+id/exercise_toolbar" >
+        <TextView
+            android:layout_marginLeft="8dp"
+            android:id="@+id/exercise_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:text="Bench Press"/>
+        <TextView
+            android:layout_marginLeft="8dp"
+            android:id="@+id/exercise_muscles"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="22sp"
+            android:fontFamily="sans-serif-light"
+            android:text="Chest * Legs"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Muscles"
-        android:id="@+id/textView5"
+    </LinearLayout>
 
-        style="@style/header"
-        android:layout_below="@+id/linearLayout"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="chest, biceps"
-        android:id="@+id/muscles"
-        android:layout_below="@+id/textView5"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="10dp"/>
 
     <!--<Button-->
         <!--android:layout_width="wrap_content"-->
@@ -68,6 +64,9 @@
         android:id="@+id/add_to_workout"
 
         android:src="@drawable/ic_action_add"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/linearLayout" />
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
