--- a/app/src/main/res/menu/choose_exercise.xml
+++ b/app/src/main/res/menu/choose_exercise.xml
@@ -4,6 +4,13 @@
     tools:context="com.sqvat.squat.AddSessionAct" >
     <item android:id="@+id/action_add_custom_exercise"
         android:title="Add custom exercise"
+        android:orderInCategory="200"
+        android:icon="@drawable/ic_action_add"
+        app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_search_exercise"
+        android:title="Search"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_action_search"
+        app:showAsAction="ifRoom"></item>
 </menu>
