--- a/app/src/main/res/menu/edit_routine.xml
+++ b/app/src/main/res/menu/edit_routine.xml
@@ -4,6 +4,7 @@
     tools:context="com.sqvat.squat.activities.EditRoutineAct" >
     <item android:id="@+id/action_add_workout"
         android:title="Add workout"
+        android:icon="@drawable/ic_action_add"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
