fixed and added icons, fixed nav drawer, fixed spaces problems, bug fixes, fixed the colors, removed some unused stuff now super stable Reps for fucking jesus 2.!

--- a/app/src/main/res/layout/activity_config_session.xml
+++ b/app/src/main/res/layout/activity_config_session.xml
@@ -52,7 +52,7 @@
        <com.shamanland.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:src="@drawable/ic_action_finish"
+           android:src="@drawable/ic_action_done"
            app:floatingActionButtonColor="@color/colorAccent"
            app:floatingActionButtonSize="normal"
            android:layout_gravity="right"
