--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -5,8 +5,21 @@
     android:layout_height="match_parent"
     tools:context="com.sqvat.squat.activities.ExerciseActivity">
 
-    <include layout="@layout/transparent_toolbar"
-        android:id="@+id/exercise_toolbar"></include>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/exercise_toolbar"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@android:color/darker_gray"
+        >
+    </android.support.v7.widget.Toolbar>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:id="@+id/toolbar_img"
+
+        />
 
     <com.shamanland.fab.FloatingActionButton
         android:layout_width="wrap_content"
@@ -15,7 +28,7 @@
 
         android:id="@+id/play_video"
 
-        android:src="@drawable/ic_action_add"
+        android:src="@drawable/ic_action_play"
         android:layout_marginTop="-32dp"
         android:layout_marginRight="16dp"
         android:layout_below="@+id/exercise_toolbar"
