--- a/app/src/main/res/layout/activity_detailed_history.xml
+++ b/app/src/main/res/layout/activity_detailed_history.xml
@@ -10,6 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/detailed_history_lv"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         ></ListView>
 
 </LinearLayout>
