--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -7,12 +7,11 @@
     tools:context="com.sqvat.squat.fragments.TimerFragment">
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:textSize="22sp"
-        android:fontFamily="sans-serif-light"
+        android:textSize="24sp"
+        android:fontFamily="sans-serif-medium"
         android:layout_gravity="center"
         android:id="@+id/seconds"/>
 
