--- a/app/src/main/res/layout/nav_drawer_li.xml
+++ b/app/src/main/res/layout/nav_drawer_li.xml
@@ -2,15 +2,18 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="wrap_content"
+    android:paddingBottom="17dp"
+    android:paddingTop="17dp"
     android:orientation="horizontal">
 
-    <!--<ImageView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center_vertical|left"-->
-        <!--android:layout_marginLeft="16dp"-->
-        <!--/>-->
+    <ImageView
+        android:layout_width="18dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|left"
+        android:layout_marginLeft="16dp"
+        android:id="@+id/drawe_li_icon"
+        />
 
 <TextView
     android:layout_width="wrap_content"
@@ -19,7 +22,7 @@
     android:textSize="14sp"
     android:fontFamily="sans-serif-medium"
     android:textColor="#87000000"
-    android:layout_marginLeft="16dp"
-    android:id="@+id/drawer_li_textview"
+    android:layout_marginLeft="38dp"
+    android:id="@+id/drawer_li_category"
     />
 </LinearLayout>
