--- a/app/src/main/res/layout/transparent_toolbar.xml
+++ b/app/src/main/res/layout/transparent_toolbar.xml
@@ -9,11 +9,14 @@
     android:layout_height="wrap_content"
     android:minHeight="?attr/actionBarSize"
     android:background="@android:color/transparent"
+    android:gravity="center_horizontal"
     >
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="240dp"
         android:src="@drawable/ic_launcher"
+        android:id="@+id/toolbar_img"
+
         />
 </android.support.v7.widget.Toolbar>
