--- a/app/src/main/res/menu/track_workut.xml
+++ b/app/src/main/res/menu/track_workut.xml
@@ -5,7 +5,7 @@
 
     <item android:id="@+id/action_finish_track"
         android:title="finish"
-        android:icon="@drawable/ic_action_finish"
+        android:icon="@drawable/ic_action_done"
         android:orderInCategory="100"
         app:showAsAction="ifRoom" />
 
