--- a/app/src/main/res/layout/fancy_li.xml
+++ b/app/src/main/res/layout/fancy_li.xml
@@ -25,7 +25,8 @@
             android:id="@+id/fancy_li_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textColor="@android:color/black"/>
         <TextView
 
             android:id="@+id/fancy_li_sub"
