--- a/app/src/main/res/menu/choose_exercise.xml
+++ b/app/src/main/res/menu/choose_exercise.xml
@@ -8,9 +8,9 @@
         android:icon="@drawable/ic_action_add"
         app:showAsAction="ifRoom" />
 
-    <item android:id="@+id/action_search_exercise"
-        android:title="Search"
-        android:orderInCategory="100"
-        android:icon="@drawable/ic_action_search"
-        app:showAsAction="ifRoom"></item>
+    <!--<item android:id="@+id/action_search_exercise"-->
+        <!--android:title="Search"-->
+        <!--android:orderInCategory="100"-->
+        <!--android:icon="@drawable/ic_action_search"-->
+        <!--app:showAsAction="ifRoom"></item>-->
 </menu>
