--- a/app/src/main/res/layout/detailed_history_li.xml
+++ b/app/src/main/res/layout/detailed_history_li.xml
@@ -22,4 +22,9 @@
         android:orientation="vertical"
         android:id="@+id/detailed_history_sets"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/divider"/>
+
 </LinearLayout>
