improved detailed history li, improved track session fragment, added notifaction on rest finished

--- a/app/src/main/res/layout/activity_detailed_history.xml
+++ b/app/src/main/res/layout/activity_detailed_history.xml
@@ -12,6 +12,8 @@
         android:id="@+id/detailed_history_lv"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="8.0dp"
         ></ListView>
 
 </LinearLayout>
