--- a/app/src/main/res/layout/fragment_track_session.xml
+++ b/app/src/main/res/layout/fragment_track_session.xml
@@ -1,23 +1,25 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!--Session's info-->
-    <android.support.v7.widget.CardView
+
+        <!--Session's info-->
+        <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
 
-        android:id="@+id/card_view"
 
-        android:layout_margin="6dp"
+        android:id="@+id/today_card_view"
+
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
 
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+
 
 
         card_view:cardElevation="1dp"
@@ -33,7 +35,7 @@
                 android:orientation="vertical"
 
 
-                android:id="@+id/workout_header"
+                android:id="@+id/today_workout_header"
 
                 android:background="@color/colorPrimary"
                 android:gravity="center_vertical">
@@ -53,18 +55,18 @@
                     android:layout_height="wrap_content"
                     style="@style/card_header"
                     android:textSize="18sp"
-                    android:id="@+id/session_card_sub_header"/>
+                    android:id="@+id/today_session_card_sub_header"/>
             </LinearLayout>
 
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
 
-                android:id="@+id/session_info"
+                android:id="@+id/today_session_info"
 
-                android:layout_below="@id/workout_header"
+                android:layout_below="@id/today_workout_header"
                 android:dividerHeight="0dp"
-                android:divider="@android:color/transparent"></ListView>
+                android:divider="@android:color/transparent"/>
         </RelativeLayout>
 
 
@@ -72,28 +74,93 @@
 
     </android.support.v7.widget.CardView>
 
+        <!--&lt;!&ndash; Last time you did this exercise info &ndash;&gt;-->
+        <!--<android.support.v7.widget.CardView-->
+        <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+
+        <!--android:id="@+id/last_card_view"-->
+
+        <!--android:layout_marginRight="8dp"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--android:layout_marginTop="8dp"-->
+
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+
+
+
+        <!--card_view:cardElevation="1dp"-->
+        <!--card_view:cardCornerRadius="3dp">-->
+
+        <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent">-->
+
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="60dp"-->
+                <!--android:orientation="vertical"-->
+
+
+                <!--android:id="@+id/last_workout_header"-->
+
+                <!--android:background="@color/colorPrimary"-->
+                <!--android:gravity="center_vertical">-->
+
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+
+                    <!--style="@style/card_header"-->
+                    <!--android:textSize="24sp"-->
+
+                    <!--android:text="Today"-->
+                    <!--/>-->
+
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--style="@style/card_header"-->
+                    <!--android:textSize="18sp"-->
+                    <!--android:id="@+id/last_session_card_sub_header"/>-->
+            <!--</LinearLayout>-->
+
+            <!--<ListView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+
+                <!--android:id="@+id/last_session_info"-->
+
+                <!--android:layout_below="@id/last_workout_header"-->
+                <!--android:dividerHeight="0dp"-->
+                <!--android:divider="@android:color/transparent"></ListView>-->
+        <!--</RelativeLayout>-->
+
+
+
+
+    <!--</android.support.v7.widget.CardView>-->
+        <!--</LinearLayout>-->
+
+
     <!-- Log set-->
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-
-        android:layout_marginTop="0dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginBottom="6dp"
 
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="8dp"
 
 
 
-        card_view:cardElevation="1dp"
-        card_view:cardCornerRadius="3dp">
+        card_view:cardElevation="8dp"
+        card_view:cardCornerRadius="0dp">
 
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
-           android:id="@+id/function_card"></FrameLayout>
+           android:id="@+id/function_card"/>
 
     </android.support.v7.widget.CardView>
 
