--- a/app/src/main/res/layout/detailed_history_li.xml
+++ b/app/src/main/res/layout/detailed_history_li.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    android:id="@+id/detailed_history_card_view"
+
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
+    card_view:cardElevation="1dp"
+    card_view:cardCornerRadius="0dp">
+<LinearLayout
+
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,10 +21,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/abc_text_size_medium_material"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
         android:text="SQUAT"
         android:id="@+id/detailed_history_exercise_name" />
 
@@ -23,8 +36,7 @@
         android:id="@+id/detailed_history_sets"/>
 
     <View
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         style="@style/divider"/>
 
 </LinearLayout>
+    </android.support.v7.widget.CardView>
