--- a/app/src/main/res/layout-v21/fragment_track_session.xml
+++ b/app/src/main/res/layout-v21/fragment_track_session.xml
@@ -148,7 +148,9 @@
 
 
     <!-- Log set-->
-    <FrameLayout
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_gravity="bottom"
@@ -158,8 +160,11 @@
         android:layout_marginRight="0dp"
         android:layout_marginBottom="0dp"
         android:padding="0dp"
-        android:background="@android:color/white"
->
+
+
+
+        card_view:cardElevation="8dp"
+        card_view:cardCornerRadius="0dp">
 
        <FrameLayout
            android:layout_width="match_parent"
@@ -168,6 +173,7 @@
            android:layout_margin="0dp"
            android:id="@+id/function_card"/>
 
-    </FrameLayout>
+    </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
