--- a/app/src/main/res/menu/choose_exercise.xml
+++ b/app/src/main/res/menu/choose_exercise.xml
@@ -2,11 +2,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.sqvat.fit.AddSessionAct" >
+
+    <item android:id="@+id/search_exercise"
+        android:title="Search"
+        android:icon="@drawable/ic_action_search"
+        app:showAsAction="collapseActionView|ifRoom"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
+
     <item android:id="@+id/action_add_custom_exercise"
         android:title="Add custom exercise"
         android:orderInCategory="200"
         android:icon="@drawable/ic_action_add"
         app:showAsAction="ifRoom" />
+
+
 
     <!--<item android:id="@+id/action_search_exercise"-->
         <!--android:title="Search"-->
