--- a/app/src/main/res/menu/edit_routine.xml
+++ b/app/src/main/res/menu/edit_routine.xml
@@ -10,6 +10,7 @@
 
     <item android:id="@+id/action_delete_routine"
         android:title="Delete Routine"
+        android:icon="@drawable/ic_action_delete"
         android:orderInCategory="200"
-        app:showAsAction="never"/>
+        app:showAsAction="ifRoom"/>
 </menu>
